--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header">
+        <ul class="nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="contacts.html">Contacts</a></li>
+        </ul>
+    </div>
     <div>
         <form action="">
                 <p>Please, feel free to use the down below form to contact me.</p>
