--- a/home.html
+++ b/home.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header">
+        <ul class="nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="contacts.html">Contacts</a></li>
+        </ul>
+    </div>
     <div>
         <div>
             <h2>About me</h2>
