--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,7 @@
             <li><a href="contacts.html">Contacts</a></li>
         </ul>
     </div>
-    <div>
+    <div class="main">
         <form action="">
                 <p>Please, feel free to use the down below form to contact me.</p>
         </form>
