--- a/courses.html
+++ b/courses.html
@@ -14,7 +14,7 @@
             <li><a href="contacts.html">Contacts</a></li>
         </ul>
     </div>
-    <div>
+    <div class="main">
             <ul>
                 <li>
                     <a href=""><img src="images/courses/tpsi3.jpg" alt=""></a>
