--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
             <li><a href="contacts.html">Contacts</a></li>
         </ul>
     </div>
-    <div>
+    <div class="main">
         <div>
             <h2>About me</h2>
             <p>
