--- a/tpsi_5a_24_25.html
+++ b/tpsi_5a_24_25.html
@@ -14,7 +14,7 @@
             <li><a href="contacts.html">Contacts</a></li>
         </ul>
     </div>
-    <div>
+    <div class="main">
         <table>
             <thead>
                 <tr>
