--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
             </ul>
         </div>
     </div>
-    <div>
+    <div class="footer">
         <ul>
             <li><a href="https://github.com/kinderp"><img src="images/logos/github_logo.png" alt=""></a></li>
             <li><a href="https://www.youtube.com/@antoniocaristia7010"><img src="images/logos/youtube_logo.png" alt=""></a></li>
