--- a/contacts.html
+++ b/contacts.html
@@ -19,5 +19,13 @@
                 <p>Please, feel free to use the down below form to contact me.</p>
         </form>
     </div>
+    <div class="footer">
+        <ul>
+            <li><a href="https://github.com/kinderp"><img src="images/logos/github_logo.png" alt=""></a></li>
+            <li><a href="https://www.youtube.com/@antoniocaristia7010"><img src="images/logos/youtube_logo.png" alt=""></a></li>
+            <li><a href="https://www.linkedin.com/in/antonio-caristia-228917b0/"><img src="images/logos/linkedin_logo.png" alt=""></a></li>
+        </ul>
+    </div>
+
 </body>
 </html>
