--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
         </ul>
     </div>
     <div class="main">
-        <div>
+        <div class="me">
             <h2>About me</h2>
             <p>
                 I am a Linux user since the early 2000s, over time I have achieved a good level of knowledge in the Gnu / Linux environment. However, i do not have professional systems administration knowledge.
@@ -31,7 +31,7 @@
             </p>
             
         </div>
-        <div>
+        <div class="cv">
             <h2>Working Experience</h2>
             <ul>
                 <li>
