--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
     <div class="main">
         <div class="me">
             <h2>About me</h2>
+            <img src="images/me.jfif" alt="">
             <p>
                 I am a Linux user since the early 2000s, over time I have achieved a good level of knowledge in the Gnu / Linux environment. However, i do not have professional systems administration knowledge.
             </p>
