--- a/tpsi_5a_24_25.html
+++ b/tpsi_5a_24_25.html
@@ -15,7 +15,7 @@
         </ul>
     </div>
     <div class="main">
-        <table>
+        <table class="calendar">
             <thead>
                 <tr>
                   <th scope="col">Lun</th>
