--- a/tpsi_5a_24_25.html
+++ b/tpsi_5a_24_25.html
@@ -28,9 +28,9 @@
             <tbody>
                 <tr>
                   <td></td>
-                  <td>1 Ott.</td>
-                  <td>2 Ott.</td>
-                    <td>
+                  <td class="nolecture">1 Ott.</td>
+                  <td class="nolecture">2 Ott.</td>
+                    <td class="lecture">
                         <span>3 Ott.</span> 
                         <br>
                         <b>Evento Pala Cultura:</b>
@@ -50,7 +50,7 @@
                             <li>Nessuna</li>
                         </ul>
                     </td>
-                  <td>
+                  <td class="lecture">
                     <span>4 Ott.</span>
                         <br>
                         <b>Festa:</b>
@@ -72,10 +72,10 @@
                   </td>
                 </tr>
                 <tr>
-                    <td>7 Ott.</td>
-                    <td>8 Ott.</td>
-                    <td>9 Ott.</td>
-                    <td>10 Ott.
+                    <td class="nolecture">7 Ott.</td>
+                    <td class="nolecture">8 Ott.</td>
+                    <td class="nolecture">9 Ott.</td>
+                    <td class="lecture">10 Ott.
                         <br>
                         <b>Git:</b>
                         "Introduzione a Git"
@@ -89,7 +89,7 @@
                             <li class="hideme">Nessuna</li>
                         </ul>
                     </td>
-                    <td>11 Ott.
+                    <td class="lecture">11 Ott.
                         <br>
                         <b>Lab:</b>
                         "HTML e CSS"
@@ -105,10 +105,10 @@
                     </td>
                   </tr>
                 <tr>
-                    <td>14 Ott.</td>
-                    <td>15 Ott.</td>
-                    <td>16 Ott.</td>
-                    <td>17 Ott.
+                    <td class="nolecture">14 Ott.</td>
+                    <td class="nolecture">15 Ott.</td>
+                    <td class="nolecture">16 Ott.</td>
+                    <td class="lecture">17 Ott.
                         <br>
                         <b>UDA1 LEZ2:</b>
                         "Evoluzione e modelli architetturali"
@@ -123,7 +123,7 @@
                             <li><a href="https://docs.google.com/presentation/d/110Qk6VK9Yxyd_4fF1Uocv2Fr_oUp8tES/edit#slide=id.p1">UDA1 LEZ2</a></li>
                         </ul>
                     </td>
-                    <td>18 Ott.
+                    <td class="lecture">18 Ott.
                         <br>
                         <b>Lab:</b>
                         "Images and Fonts"
@@ -140,10 +140,10 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>21 Ott.</td>
-                    <td>22 Ott.</td>
-                    <td>23 Ott.</td>
-                    <td>24 Ott.
+                    <td class="nolecture">21 Ott.</td>
+                    <td class="nolecture">22 Ott.</td>
+                    <td class="nolecture">23 Ott.</td>
+                    <td class="lecture">24 Ott.
                         <br>
                         <b>Lab:</b>
                         "Forms"
@@ -158,7 +158,7 @@
                             <li><a href="https://github.com/kinderp/lab1/blob/master/slides/5_fonts_and_forms/LAB1_L.enb">LAB1_L</a></li>
                         </ul>
                     </td>
-                    <td>25 Ott.
+                    <td class="lecture">25 Ott.
                         <br>
                         <b>Elezioni:</b>
                         "Sospensione didattica"
