--- a/tpsi_5a_24_25.html
+++ b/tpsi_5a_24_25.html
@@ -43,11 +43,11 @@
                         </ul>
                         <b>Video Lezione</b>
                         <ul>
-                            <li>Nessuna</li>
+                            <li class="hideme">Nessuna</li>
                         </ul>
                         <b>Slides</b>
                         <ul>
-                            <li>Nessuna</li>
+                            <li class="hideme">Nessuna</li>
                         </ul>
                     </td>
                   <td class="lecture">
@@ -63,11 +63,11 @@
                         </ul>
                         <b>Video Lezione</b>
                         <ul>
-                            <li>Nessuna</li>
+                            <li class="hideme">Nessuna</li>
                         </ul>
                         <b>Slides</b>
                         <ul>
-                            <li>Nessuna</li>
+                            <li class="hideme">Nessuna</li>
                         </ul>
                   </td>
                 </tr>
@@ -165,12 +165,12 @@
                         <hr>
                         <b>Video Lezione</b>
                         <ul>
-                            <li>Nessuna</li>
+                            <li class="hideme">Nessuna</li>
                         </ul>
                         <b>Slides</b>
                         <ul>
-                            <li>Nessuna</li>
-                            <li>Nessuna</li>
+                            <li class="hideme">Nessuna</li>
+                            <li class="hideme">Nessuna</li>
                         </ul>
                     </td>
                 </tr>
